make adventurer things translatable + a little fix 💀  (#50)
* Update Adventurer.cs

* Update en_US.json

* also, heres a little fix lol

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3132,6 +3132,14 @@
   "AdventurerIngredientsDisplay": "{0}: {1}\\nVent to craft this weapon / Pet to cycle to next weapon",
   "AdventurerWeaponCrafted": "Crafted Weapon: {0}",
   "AdventurerFound": "Found Resource: {0}",
+  "AdventurerGun.Gun": "Gun",
+  "AdventurerGun.Shield": "Shield",
+  "AdventurerGun.Lantern": "Lantern",
+  "AdventurerGun.Portal": "Portal",
+  "AdventurerGun.Wrench": "Wrench",
+  "AdventurerGun.Proxy": "Proxy",
+  "AdventurerGun.Prediction": "Prediction",
+  "AdventurerGun.RNG": "RNG",
   "Imitator": "Imitator",
   "ImitatorInfo": "Your kill cooldown shifts",
   "ImitatorInfoLong": "(Neutral):\\nAs the Imitator, your kill cooldown is different after every even numbered kill and every odd numbered kill of yours. You have a separate cooldown after meetings. Your first kill after every meeting will set your cooldown to the Even-Numbered Kill Cooldown, your second kill will set it to the Odd-Numbered Kill Cooldown, and the process repeats until a meeting is called again.",
@@ -3327,8 +3335,8 @@
   "CommanderInfo": "Command your team",
   "CommanderInfoLong": "(Impostors):\\nAs the Commander, you can switch between 6 modes by venting/petting your pet. You can execute the selected action by shapeshifting.<size=70%>\\n\\n<b><u>Mark:</u></b> Marks your shapeshift target with a unique color visible to all impostors. Use this to command them to kill that player!\\n\\n<b><u>Whistle:</u></b> This tells all or 1 specific<sup>*</sup> impostor(s) to come to you and gives them (each) an arrow pointing towards you.\\n\\n<b><u>Kill Anyone:</u></b> Notifies all or 1 specific<sup>*</sup> impostor(s) to kill anyone.\\n\\n<b><u>Leave Player Alive:</u></b> Shapeshifting into a crewmate marks that player with a unique color and text telling other impostors to not kill that player. Shapeshifting into an impostor tells that impostor to not kill anyone.\\n\\n<b><u>Don't Sabotage:</u></b> Notifies all impostors to not call any sabotage.\\n\\n<b><u>Use Ability:</u></b> Notifies all or 1 specific<sup>*</sup> impostor(s) to use their ability.\\n\\n<size=60%><sup>*</sup> If you shapeshift into an impostor, the action executes specifically and only on them.</size></size>",
   "CommanderNotify": "The Commander wants you to meet with them",
-  "CommanderTarget": "<size=1.7>Commander's target</color>",
-  "CommanderDontKill": "<size=1.7>Don't kill this player</color>",
+  "CommanderTarget": "<size=1.7>Commander's target</size>",
+  "CommanderDontKill": "<size=1.7>Don't kill this player</size>",
   "CommanderWhistling": "Whistling",
   "CommanderKillAnyoneNotify": "Commander wants you to kill anyone",
   "CommanderDontSabotageNotify": "Commander wants you to not sabotage",
