Fix FFA, Fix Moderator tags, New timer font for S&G

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -240,7 +240,7 @@
   "Infectious": "Infectious",
   "Virus": "Virus",
   "Pursuer": "Pursuer",
-  "Phantom": "Phantom",
+  "Phantom": "Specter",
   "Pirate": "Pirate",
   "Jinx": "Jinx",
   "Maverick": "Maverick",
@@ -761,7 +761,7 @@
   "InfectiousInfoLong": "(Neutrals):\\nAs the Infectious, your job is to infect as many players as you can.\\n\\nIf you infect all the killers, you then can simply outnumber the crew and win the game.",
   "VirusInfoLong": "(Neutrals):\\nThe virus' goal is to eliminate other players. When a crewmate is killed, their corpse is infected, and the reporting crewmate joins the virus team or dies if the virus isn't voted out. The Virus team wins if they outnumber the Crewmate team.",
   "PursuerInfoLong": "(Neutrals):\\nAs the Pursuer, you can use your ability on someone to make them shoot a blank when they try to kill (= reset their kill cooldown).\\n\\nTo win, just survive to the end of the game.",
-  "PhantomInfoLong": "(Neutrals):\\nAs the Phantom, your job is to get killed and finish your tasks.\\nYou can do your tasks while alive.\\nYou cannot win if you're alive.\\nIf you get killed, you win with the winning team if your tasks are completed.",
+  "PhantomInfoLong": "(Neutrals):\\nAs the Specter, your job is to get killed and finish your tasks.\\nYou can do your tasks while alive.\\nYou cannot win if you're alive.\\nIf you get killed, you win with the winning team if your tasks are completed.",
   "PirateInfoLong": "(Neutrals):\\nAs the Pirate, use your kill button to select a target every round. You will duel with your target when in a meeting. If both the Pirate and the target choose the same number Pirate wins.\\nAdditionally, if Pirate wins the duel, or Target doesn't duel Target will suicide.\\n\\nDueling command:- /duel X (where X can be 0, 1 or 2)\\n\\nYou win after winning a certain number of duels set by the host.",
   "JinxInfoLong": "(Neutrals):\\nAs the Jinx, whenever you are attacked, you jinx them, resulting in them dying to a jinx.\\nThis has limited uses.\\n\\nKill off everyone to win.",
   "MaverickInfoLong": "(Neutrals):\\nAs the Maverick, you can kill much like a Serial Killer.\\n\\nHowever, you win with the winning team rather than alone.\\nIf you die, you lose.",
@@ -1946,7 +1946,7 @@
   "InfectiousBittenPlayer": "You successfully infected a player",
   "GuessNotAllowed": "Sorry, your role does not have access to guessing.",
   "GuessOnbound": "This player has the Onbound add-on, so your guess on them was canceled.",
-  "GuessPhantom": "You can't guess a Phantom, that allows them to win!",
+  "GuessPhantom": "You can't guess a Specter, that allows them to win!",
   "DovesOfNeaceOnGuard": "Ability used, {0} uses remain",
   "DovesOfNeaceMaxUsage": "Ability use limit reached",
   "DovesOfNeaceSkillNotify": "Pacifist reset your kill cooldown",
@@ -3457,11 +3457,11 @@
   "WardenInfoLong": "(Crewmates):\\nAs the Warden, you can protect someone (optimally a crewmate) to notify them about being in danger and to give them a temporary speed boost.",
   "WardenNotify": "The Warden warns you that you're in danger!",
   "Prefix.Warden": "Warden",
-  "Specter": "Specter",
+  "Specter": "Phantom",
   "SpecterInfo": "Finish Tasks to Win!",
-  "SpecterInfoLong": "(Crewmates):\\nAs the Specter, you must finish all of your tasks to win! Depending on a setting, you may also end the game and win alone if you do so!",
+  "SpecterInfoLong": "(Crewmates):\\nAs the Phantom, you must finish all of your tasks to win! Depending on a setting, you may also end the game and win alone if you do so!",
   "SnatchWin": "Snatches Win (Win With Winning Team if Off)",
-  "Prefix.Specter": "Specter",
+  "Prefix.Specter": "Phantom",
   "Haunter": "Haunter",
   "HaunterInfo": "You're the Impostors' Worst Nightmare",
   "HaunterInfoLong": "(Neutrals):\\nAs the Haunter, when you complete all of your tasks, a random living impostor's name will show in red to everyone in meetings. When you have 1 task left, all impostors will get an arrow pointing towards you, and if any of them come close to you, you lose this role.",
@@ -3838,7 +3838,7 @@
   "WinnerRoleText.Infectious": "Infectious Wins!",
   "WinnerRoleText.Rogue": "Mavericks Win!",
   "WinnerRoleText.Virus": "Virus Wins!",
-  "WinnerRoleText.Phantom": "Phantom Wins!",
+  "WinnerRoleText.Phantom": "Specter Wins!",
   "WinnerRoleText.Jinx": "Jinx Wins!",
   "WinnerRoleText.CursedSoul": "Cursed Soul Wins!",
   "WinnerRoleText.Ritualist": "Ritualist Wins!",
@@ -3870,7 +3870,7 @@
   "WinnerRoleText.Sprayer": "Sprayer Wins!",
   "WinnerRoleText.SoulHunter": "Soul Hunter Wins!",
   "WinnerRoleText.Tiger": "Tiger Wins!",
-  "WinnerRoleText.Specter": "Specter Wins!",
+  "WinnerRoleText.Specter": "Phantom Wins!",
   "WinnerRoleText.Default": "{0} Wins!",
   "AdditionalWinnerRoleText.Sidekick": "along with Sidekicks",
   "AdditionalWinnerRoleText.Opportunist": "The Opportunist survived",
@@ -3884,13 +3884,13 @@
   "AdditionalWinnerRoleText.Jester": "The Jester wins along",
   "AdditionalWinnerRoleText.Lovers": "Lovers win along",
   "AdditionalWinnerRoleText.Executioner": "Executioner wins along",
-  "AdditionalWinnerRoleText.Phantom": "Phantom wins along",
+  "AdditionalWinnerRoleText.Phantom": "Specter wins along",
   "AdditionalWinnerRoleText.Maverick": "The Maverick survived",
   "AdditionalWinnerRoleText.Romantic": "The Romantic wins along",
   "AdditionalWinnerRoleText.VengefulRomantic": "The Vengeful Romantic avenged their lover",
   "AdditionalWinnerRoleText.Postman": "The Postman delivered mail to everyone",
   "AdditionalWinnerRoleText.SoulHunter": "Soul Hunter wins along",
-  "AdditionalWinnerRoleText.Specter": "Specter wins along",
+  "AdditionalWinnerRoleText.Specter": "Phantom wins along",
   "AdditionalWinnerRoleText.Default": "{0} wins along",
   "ErrorEndText": "An error occurred",
   "ErrorEndTextDescription": "To avoid crashing, the game was forcibly ended.",
