--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2615,6 +2615,11 @@
   "Transmitter": "Transmitter",
   "TransmitterInfo": "TP to nearest player by doing a task",
   "TransmitterInfoLong": "(Crewmates):\\nAs the Transmitter, when you complete a task, you teleport to the nearest player.",
+  "Sentry": "Sentry",
+  "SentryInfo": "Monitor a Room",
+  "SentryInfoLong": "(Crewmates):\\nAs the Sentry, you can monitor a room by petting your pet. When you pet your pet in the future, you get information from that room, including:<size=80%>\\n- The players currently in that room\\n- Who is dead in that room (if any)\\n- The players that used a vent in that room\\n- Whether someone shapeshifted in that room</size>\\n\\nDepending on the settings, players may know if a room is monitored, and you may not be able to view this info during Comms Sabotages.",
+  "Sentry.Suffix.MonitoredRoom": "<size=80%>This room is monitored by the {0}</size>",
+  "Sentry.Notify.Info": "<u>Info about your monitored room:</u>\\nPlayers: {0}\\nDead players: {1}\\nPlayers that used a vent: {2}\\nShapeshifters: {3}",
   "Autocrat": "Autocrat",
   "AutocratInfo": "TP nearest player to you by doing a task",
   "AutocratInfoLong": "(Crewmates):\\nAs the Autocrat, when you complete a task, you teleport the nearest player to you.",
@@ -2829,9 +2834,9 @@
   "StealthDarkened": "Darkened: {0}",
   "StealthExcludeImpostors": "Ignore Impostors when Blinding",
   "StealthDarkenDuration": "Blinding Duration",
-  "Analyzer": "Analyzer",
+  "Analyst": "Analyst",
   "AnalyzerInfo": "Analyze Players to Get Information",
-  "AnalyzerInfoLong": "(Crewmates):\\nAs the Analyzer, you may use your kill button on someone to analyze them. You will have to stand next to your target for a few seconds to complete the analysis. When the analysis is complete, you will see how many players they've killed so far, how many times they've vented so far, and their role basis.\\n\\nNote: If the host's settings don't allow you to see an information, the result will show 0 or nothing!\\nNote: None of these factors determine whether someone is evil or not! Think twice before judging too fast!",
+  "AnalyzerInfoLong": "(Crewmates):\\nAs the Analyst, you may use your kill button on someone to analyze them. You will have to stand next to your target for a few seconds to complete the analysis. When the analysis is complete, you will see how many players they've killed so far, how many times they've vented so far, and their role basis.\\n\\nNote: If the host's settings don't allow you to see an information, the result will show 0 or nothing!\\nNote: None of these factors determine whether someone is evil or not! Think twice before judging too fast!",
   "AnalyzerCD": "Analyze Cooldown",
   "AnalyzerDur": "Analyze Time",
   "AnalyzerResult": "\\n\\nShowing analyzation result for <color=#00ffa5>{0}</color>:\\nKills: <color=#ff1919>{1}</color>, Vents: <color=#ffa500>{2}</color>, Role Basis: <color=#00ffff>{3}</color>",
@@ -3319,6 +3324,19 @@
   "TrollInfoLong": "GET KILLED TO WIN",
   "TrollVision": "Troll Vision",
   "TrollSpeed": "Troll Speed",
+  "Generator": "Generator",
+  "GeneratorInfo": "Power up the ship",
+  "GeneratorInfoLong": "(Impostors):\\nAs the Generator, you generate charges every second. You can only kill/vent/shapeshift/sabotage if you have enough charges to do so. You also lose charges while shapeshifted.",
+  "Generator.ChargesGainedEverySecond": "Charges Gained Every Second",
+  "Generator.StartingCharges": "Starting Charges",
+  "Generator.ChargesLostWhileShiftedPerSecond": "Charges Lost While Shifted Per Second",
+  "Generator.MaxChargesStored": "Maximum Charges Stored",
+  "Generator.Kill.Cost": "Charges Needed to Kill",
+  "Generator.Vent.Cost": "Charges Needed to Vent",
+  "Generator.Sabotage.Cost": "Charges Needed to Sabotage",
+  "Generator.Shapeshift.Cost": "Charges Needed to Shapeshift",
+  "Generator.Notify.RevertShapeshift": "You ran out of charges, so shapeshifting was reverted",
+  "Generator.Notify.NotEnoughCharges": "You don't have enough charges ({0}) to do that",
   "GNoCommandInfo": "<b>This Command can only be used when in lobby or after you die.</b>\\n\\ntype <b>/gno X</b> to play guess a number. X can be a number between 0 and 99 (both included). \\n\\nYou get maximum of <color=#ff0000>7 tries</color> to guess the number.\\n\\n Example:- <b>/gno 10</b>",
   "GNoLost": "Oh, you were so close! Just one more guess, and you might have deciphered the Da Vinci code! By the way, <color=#ff0000>the secret number was... {0}!</color> But hey, you were only off by a few billion possibilities.  Better luck next time, Sherlock! ",
   "GNoLow": "Oh, you're really nailing this! It's so low, I almost need a shovel to dig it up!\\nYou have <color=#ff0000>{0} guesses</color> left!",
