--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -2820,7 +2820,7 @@
   "StealthDarkened": "Cegado: {0}",
   "StealthExcludeImpostors": "Ignorar Impostores ao Cegar",
   "StealthDarkenDuration": "Duração da Visão Zero",
-  "Analyzer": "Analisador",
+  "Analyst": "Analisador",
   "AnalyzerInfo": "Analize jogadores para obter Informações",
   "AnalyzerInfoLong": "(Tripulantes):\\nComo Analisador, você pode usar seu botão matar para analizar um jogador. Você deverá ficar ao lado do alvo por alguns segundos para concluir a analise. Quando a analise estiver completa, Você verá quantos jogadores ele matou, quantoas vezes ele entrou no duto e a sua função base.\\n\\nNota: Se as configurações do Anfitrião não permitirem você ver uma informação, o resultado será 0 ou nada!\\nNota: Nenhum destes fatores determinam se o jogador e maligno ou não! Pense duas vezes antes de acusar!",
   "AnalyzerCD": "Recarga para analisar",
