--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2835,8 +2835,8 @@
   "StealthExcludeImpostors": "Ignore Impostors when Blinding",
   "StealthDarkenDuration": "Blinding Duration",
   "Analyst": "Analyst",
-  "AnalyzerInfo": "Analyze Players to Get Information",
-  "AnalyzerInfoLong": "(Crewmates):\\nAs the Analyst, you may use your kill button on someone to analyze them. You will have to stand next to your target for a few seconds to complete the analysis. When the analysis is complete, you will see how many players they've killed so far, how many times they've vented so far, and their role basis.\\n\\nNote: If the host's settings don't allow you to see an information, the result will show 0 or nothing!\\nNote: None of these factors determine whether someone is evil or not! Think twice before judging too fast!",
+  "AnalystInfo": "Analyze Players to Get Information",
+  "AnalystInfoLong": "(Crewmates):\\nAs the Analyst, you may use your kill button on someone to analyze them. You will have to stand next to your target for a few seconds to complete the analysis. When the analysis is complete, you will see how many players they've killed so far, how many times they've vented so far, and their role basis.\\n\\nNote: If the host's settings don't allow you to see an information, the result will show 0 or nothing!\\nNote: None of these factors determine whether someone is evil or not! Think twice before judging too fast!",
   "AnalyzerCD": "Analyze Cooldown",
   "AnalyzerDur": "Analyze Time",
   "AnalyzerResult": "\\n\\nShowing analyzation result for <color=#00ffa5>{0}</color>:\\nKills: <color=#ff1919>{1}</color>, Vents: <color=#ffa500>{2}</color>, Role Basis: <color=#00ffff>{3}</color>",
