Add Schrödinger's Cat & Cherokious

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2620,6 +2620,14 @@
   "SentryInfoLong": "(Crewmates):\\nAs the Sentry, you can monitor a room by petting your pet. When you pet your pet in the future, you get information from that room, including:<size=80%>\\n- The players currently in that room\\n- Who is dead in that room (if any)\\n- The players that used a vent in that room\\n- Whether someone shapeshifted in that room</size>\\n\\nDepending on the settings, players may know if a room is monitored, and you may not be able to view this info during Comms Sabotages.",
   "Sentry.Suffix.MonitoredRoom": "<size=80%>This room is monitored by the {0}</size>",
   "Sentry.Notify.Info": "<u>Info about your monitored room:</u>\\nPlayers: {0}\\nDead players: {1}\\nPlayers that used a vent: {2}\\nShapeshifters: {3}",
+  "SchrodingersCat": "Schrödinger's Cat",
+  "SchrodingersCatInfo": "Get Attacked to Get a Role",
+  "SchrodingersCatInfoLong": "(Neutrals):\\nAs Schrödinger's Cat, if you get attacked, you turn into the same role as your killer.\\nIf you don't get attacked, you lose, or you can win with crewmates, depending on the settings.",
+  "SchrodingersCat.WinsWithCrewIfNotAttacked": "Wins with crewmates if not attacked",
+  "SchrodingersCat.Notify.KillerRecruited": "You have recruited the {1}! {0} now has the same role as you.",
+  "Cherokious": "Cherokious",
+  "CherokiousInfo": "Do tasks to get Bullets to Kill",
+  "CherokiousInfoLong": "(Neutrals):\\nAs the Cherokious, you can get bullets by completing tasks. You can kill by petting your pet near someone. You can only kill if you have bullets.",
   "Autocrat": "Autocrat",
   "AutocratInfo": "TP nearest player to you by doing a task",
   "AutocratInfoLong": "(Crewmates):\\nAs the Autocrat, when you complete a task, you teleport the nearest player to you.",
