--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1091,6 +1091,9 @@
   "DisableZiplineForImps": "Disable Zipline for <color=#ff1919>Impostors</color>",
   "DisableZiplineForNeutrals": "Disable Zipline for <color=#ffab1b>Neutrals</color>",
   "DisableShapeshiftAnimations": "Disable Shapeshift Animations",
+  "DisableAllShapeshiftAnimations": "Disable All Shapeshift Animations",
+  "CTA.PlayersCanWinWithOriginalTeam": "Custom Teamed Players Can Win With Their Original Team",
+  "CTA.PlayersCanSeeEachOthersRoles": "Custom Teamed Players Can See Each Other's Roles",
   "AirshipVariableElectrical": "Variable Electrical (Airship)",
   "ApplyDenyNameList": "Apply DenyName List",
   "KickPlayerFriendCodeNotExist": "Kick players who are not logged in",
@@ -1128,6 +1131,7 @@
   "MenuTitle.TaskSettings": "★ Task Management ★",
   "MenuTitle.Guessers": "★ Guesser Mode ★",
   "MenuTitle.GuesserModeRoles": "★ Roles and Add-ons for Guesser Mode ★",
+  "MenuTitle.CTA": "★ Custom Team Assignment ★",
   "ShieldPersonDiedFirst": "Shield the person who got killed first in the last game",
   "JackalWinWithSidekick": "<color=#00b4eb>Jackal</color> can win with <color=#00b4eb>Sidekick</color>'s team",
   "SidekickKnowOtherSidekick": "<color=#00b4eb>Sidekicks</color> know each other",
