Update source file en_US.json

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1091,6 +1091,9 @@
   "DisableZiplineForImps": "Disable Zipline for <color=#ff1919>Impostors</color>",
   "DisableZiplineForNeutrals": "Disable Zipline for <color=#ffab1b>Neutrals</color>",
   "DisableShapeshiftAnimations": "Disable Shapeshift Animations",
+  "DisableAllShapeshiftAnimations": "Disable All Shapeshift Animations",
+  "CTA.PlayersCanWinWithOriginalTeam": "Custom Teamed Players Can Win With Their Original Team",
+  "CTA.PlayersCanSeeEachOthersRoles": "Custom Teamed Players Can See Each Other's Roles",
   "AirshipVariableElectrical": "Variable Electrical (Airship)",
   "ApplyDenyNameList": "Apply DenyName List",
   "KickPlayerFriendCodeNotExist": "Kick players who are not logged in",
@@ -1128,6 +1131,7 @@
   "MenuTitle.TaskSettings": "★ Task Management ★",
   "MenuTitle.Guessers": "★ Guesser Mode ★",
   "MenuTitle.GuesserModeRoles": "★ Roles and Add-ons for Guesser Mode ★",
+  "MenuTitle.CTA": "★ Custom Team Assignment ★",
   "ShieldPersonDiedFirst": "Shield the person who got killed first in the last game",
   "JackalWinWithSidekick": "<color=#00b4eb>Jackal</color> can win with <color=#00b4eb>Sidekick</color>'s team",
   "SidekickKnowOtherSidekick": "<color=#00b4eb>Sidekicks</color> know each other",
@@ -2618,6 +2622,8 @@
   "Sentry": "Sentry",
   "SentryInfo": "Monitor a Room",
   "SentryInfoLong": "(Crewmates):\\nAs the Sentry, you can monitor a room by petting your pet. When you pet your pet in the future, you get information from that room, including:<size=80%>\\n- The players currently in that room\\n- Who is dead in that room (if any)\\n- The players that used a vent in that room\\n- Whether someone shapeshifted in that room</size>\\n\\nDepending on the settings, players may know if a room is monitored, and you may not be able to view this info during Comms Sabotages.",
+  "Sentry.ShowInfoDuration": "Info is Visible for",
+  "Sentry.PlayersKnowAboutCamera": "Players Know if the Room is Monitored",
   "Sentry.Suffix.MonitoredRoom": "<size=80%>This room is monitored by the {0}</size>",
   "Sentry.Notify.Info": "<u>Info about your monitored room:</u>\\nPlayers: {0}\\nDead players: {1}\\nPlayers that used a vent: {2}\\nShapeshifters: {3}",
   "SchrodingersCat": "Schrödinger's Cat",
@@ -2625,6 +2631,7 @@
   "SchrodingersCatInfoLong": "(Neutrals):\\nAs Schrödinger's Cat, if you get attacked, you turn into the same role as your killer.\\nIf you don't get attacked, you lose, or you can win with crewmates, depending on the settings.",
   "SchrodingersCat.WinsWithCrewIfNotAttacked": "Wins with crewmates if not attacked",
   "SchrodingersCat.Notify.KillerRecruited": "You have recruited the {1}! {0} now has the same role as you.",
+  "SchrodingersCat.Notify.RecruitedByKiller": "You have been recruited by the {1}! You now have the same role as {0}.",
   "Cherokious": "Cherokious",
   "CherokiousInfo": "Do tasks to get Bullets to Kill",
   "CherokiousInfoLong": "(Neutrals):\\nAs the Cherokious, you can get bullets by completing tasks. You can kill by petting your pet near someone. You can only kill if you have bullets.",
