Fixes & Cat becomes Amnesiac if copied role is single

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2625,7 +2625,9 @@
   "Sentry.ShowInfoDuration": "Info is Visible for",
   "Sentry.PlayersKnowAboutCamera": "Players Know if the Room is Monitored",
   "Sentry.Suffix.MonitoredRoom": "<size=80%>This room is monitored by the {0}</size>",
+  "Sentry.Suffix.Self": "<size=70%>Monitoring: <#00ffa5>{0}</color></size>",
   "Sentry.Notify.Info": "<u>Info about your monitored room:</u>\\nPlayers: {0}\\nDead players: {1}\\nPlayers that used a vent: {2}\\nShapeshifters: {3}",
+  "Sentry.Notify.Info.NoData": "<#ff0000>none</color>",
   "SchrodingersCat": "Schrödinger's Cat",
   "SchrodingersCatInfo": "Get Attacked to Get a Role",
   "SchrodingersCatInfoLong": "(Neutrals):\\nAs Schrödinger's Cat, if you get attacked, you turn into the same role as your killer.\\nIf you don't get attacked, you lose, or you can win with crewmates, depending on the settings.",
