--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2624,10 +2624,13 @@
   "SentryInfoLong": "(Crewmates):\\nAs the Sentry, you can monitor a room by petting your pet. When you pet your pet in the future, you get information from that room, including:<size=80%>\\n- The players currently in that room\\n- Who is dead in that room (if any)\\n- The players that used a vent in that room\\n- Whether someone shapeshifted in that room</size>\\n\\nDepending on the settings, players may know if a room is monitored, and you may not be able to view this info during Comms Sabotages.",
   "Sentry.ShowInfoDuration": "Info is Visible for",
   "Sentry.PlayersKnowAboutCamera": "Players Know if the Room is Monitored",
+  "Sentry.CannotSeeInfoDuringComms": "Cannot See Info During Comms Sabotages",
   "Sentry.Suffix.MonitoredRoom": "<size=80%>This room is monitored by the {0}</size>",
   "Sentry.Suffix.Self": "<size=70%>Monitoring: <#00ffa5>{0}</color></size>",
-  "Sentry.Notify.Info": "<u>Info about your monitored room:</u>\\nPlayers: {0}\\nDead players: {1}\\nPlayers that used a vent: {2}\\nShapeshifters: {3}",
+  "Sentry.Notify.Info": "<u>Info about your monitored room:</u>\\nPlayers: {0}\\nDead players: {1}",
   "Sentry.Notify.Info.NoData": "<#ff0000>none</color>",
+  "Sentry.Notify.Shapeshifted": "{0} shapeshifted into {1} in your monitored room",
+  "Sentry.Notify.Vented": "{0} vented in your monitored room",
   "Bargainer": "Bargainer",
   "BargainerInfo": "Gain Money & Buy Power-Ups",
   "BargainerInfoLong": "(Neutrals):\\nAs the Bargainer, you can gain money by killing, sabotaging and surviving meetings. You can use this money to buy some items from the shop. All devices on this map represent a shop you can use by going near it. You can buy the following items:<size=80%>\\n- Energy Drink (lowers your kill cooldown for that round)\\n- Lens Of Truth (reveals a random player's role for some time)\\n- Band Aid (gives you a shield for some time)</size>\\nWhen you step away from a shop, the selected item will be purchased if you have enough money for it. You can choose to not buy anything. While in the shop, use your pet button to cycle between the available items.",
