--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2621,7 +2621,7 @@
   "TransmitterInfoLong": "(Crewmates):\\nAs the Transmitter, when you complete a task, you teleport to the nearest player.",
   "Sentry": "Sentry",
   "SentryInfo": "Monitor a Room",
-  "SentryInfoLong": "(Crewmates):\\nAs the Sentry, you can monitor a room by petting your pet. When you pet your pet in the future, you get information from that room, including:<size=80%>\\n- The players currently in that room\\n- Who is dead in that room (if any)\\n- The players that used a vent in that room\\n- Whether someone shapeshifted in that room</size>\\n\\nDepending on the settings, players may know if a room is monitored, and you may not be able to view this info during Comms Sabotages.",
+  "SentryInfoLong": "(Crewmates):\\nAs the Sentry, you can monitor a room by petting your pet. When you pet your pet in the future, you get information from that room, including:<size=80%>\\n- The players currently in that room\\n- Who is dead in that room (if any)</size>\\nYou also get a notification when someone uses a vent or shapeshifts in that room.\\n\\nDepending on the settings, players may know if a room is monitored, and you may not be able to view this info during Comms Sabotages.",
   "Sentry.ShowInfoDuration": "Info is Visible for",
   "Sentry.PlayersKnowAboutCamera": "Players Know if the Room is Monitored",
   "Sentry.CannotSeeInfoDuringComms": "Cannot See Info During Comms Sabotages",
@@ -2633,7 +2633,7 @@
   "Sentry.Notify.Vented": "{0} vented in your monitored room",
   "Bargainer": "Bargainer",
   "BargainerInfo": "Gain Money & Buy Power-Ups",
-  "BargainerInfoLong": "(Neutrals):\\nAs the Bargainer, you can gain money by killing, sabotaging and surviving meetings. You can use this money to buy some items from the shop. All devices on this map represent a shop you can use by going near it. You can buy the following items:<size=80%>\\n- Energy Drink (lowers your kill cooldown for that round)\\n- Lens Of Truth (reveals a random player's role for some time)\\n- Band Aid (gives you a shield for some time)</size>\\nWhen you step away from a shop, the selected item will be purchased if you have enough money for it. You can choose to not buy anything. While in the shop, use your pet button to cycle between the available items.",
+  "BargainerInfoLong": "(Neutrals):\\nAs the Bargainer, you can gain money by killing, sabotaging and surviving meetings. You can use this money to buy some items from the shop. All devices on this map represent a shop you can use by going near it. You can buy the following items:<size=80%>\\n- Energy Drink (lowers your kill cooldown for that round)\\n- Lens Of Truth (reveals a random player's role for some time)\\n- Band Aid (gives you a shield for some time)</size>\\nWhen you step away from a shop, the selected item will be purchased if you have enough money for it. You can choose to not buy anything. While in the shop, sabotage to cycle between the available items.",
   "Bargainer.StartingMoney": "Starting Money",
   "Bargainer.Kill.Enabled": "Gain Money for Killing",
   "Bargainer.Kill.Amount": "Money Gained for Killing",
@@ -2648,16 +2648,20 @@
   "Bargainer.BandAid.Enabled": "Band Aid Enabled",
   "Bargainer.BandAid.Cost": "Band Aid Cost",
   "Bargainer.BandAid.Duration": "Band Aid Duration",
-  "Bargainer.BandAid.DurationSwitch": "Band Aid Lasts For",
+  "Bargainer.BandAid.DurationSwitch": "Band Aid Lasts",
   "Bargainer.EnergyDrink.ReducedKCD": "Energy Drink Reduced Kill Cooldown",
   "Bargainer.LensOfTruth.Duration": "Lens Of Truth Duration",
-  "Bargainer.LensOfTruth.DurationSwitch": "Lens Of Truth Lasts For",
+  "Bargainer.LensOfTruth.DurationSwitch": "Lens Of Truth Lasts",
   "Bargainer.Notify.PurchasedItem": "You have purchased a(n) {0}",
   "Bargainer.None": "No Item",
   "Bargainer.EnergyDrink": "Energy Drink",
   "Bargainer.LensOfTruth": "Lens Of Truth",
   "Bargainer.BandAid": "Band Aid",
-  "Bargainer.Suffix.InShop": "<size=80%>[<#00ffa5>Shop</color>] Selected Item: {0}</size>",
+  "Bargainer.Suffix.InShop": "<size=80%>[<#00ffa5>Shop</color>] Selected: {0} ({1})</size>",
+  "Forever": "Forever",
+  "UntilNextMeeting": "Until Next Meeting",
+  "UntilNextReveal": "Until Next Reveal",
+  "ForSpecifiedTime": "For Specified Time",
   "SchrodingersCat": "Schrödinger's Cat",
   "SchrodingersCatInfo": "Get Attacked to Get a Role",
   "SchrodingersCatInfoLong": "(Neutrals):\\nAs Schrödinger's Cat, if you get attacked, you turn into the same role as your killer.\\nIf you don't get attacked, you lose, or you can win with crewmates, depending on the settings.",
