--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2632,6 +2632,12 @@
   "Sentry.Notify.Shapeshifted": "{0} shapeshifted into {1} in your monitored room",
   "Sentry.Notify.Vented": "{0} vented in your monitored room",
   "Sentry.Notify.InvalidRoom": "You are not in a room",
+  "Samurai": "Samurai",
+  "SamuraiInfo": "Kill Players in Unique Ways",
+  "SamuraiInfoLong": "(Neutrals):\\nAs the Samurai, you can do delayed kills and normal kills. What decides? Well, if you click your kill button on someone (the kill won't occur immediately) and you stay near them for a few seconds (like an arsonist douse), you get a lower kill cooldown and the kill will be delayed. If you fail to stay near them, you do a normal kill, lunge included.",
+  "Samurai.NearbyDuration": "Time to Stay Near Target",
+  "Samurai.SuccessKCD": "Kill Cooldown for Delayed Kills",
+  "Samurai.KillDelay": "Kill Delay",
   "Bargainer": "Bargainer",
   "BargainerInfo": "Gain Money & Buy Power-Ups",
   "BargainerInfoLong": "(Neutrals):\\nAs the Bargainer, you can gain money by killing, sabotaging and surviving meetings. You can use this money to buy some items from the shop. All devices on this map represent a shop you can use by going near it. You can buy the following items:<size=80%>\\n- Energy Drink (lowers your kill cooldown for that round)\\n- Lens Of Truth (reveals a random player's role for some time)\\n- Band Aid (gives you a shield for some time)</size>\\nWhen you step away from a shop, the selected item will be purchased if you have enough money for it. You can choose to not buy anything. While in the shop, sabotage to cycle between the available items.",
