PB infected shows in meetings, Update CTA App BG (push changes), Add Bloodmoon

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3538,6 +3538,11 @@
   "SpecterInfoLong": "(Crewmates):\\nAs the Phantom, you must finish all of your tasks to win! Depending on a setting, you may also end the game and win alone if you do so!",
   "SnatchWin": "Snatches Win (Win With Winning Team if Off)",
   "Prefix.Specter": "Phantom",
+  "Bloodmoon": "Bloodmoon",
+  "BloodmoonInfo": "Help the Impostors Kill!",
+  "BloodmoonInfoLong": "(Impostors):\\nAs the Bloodmoon, you can use your protect button on someone to make them die after a set amount of seconds. They know about this.",
+  "Bloodmoon.Duration": "Time After Target Dies",
+  "Bloodmoon.Suffix": "<{1}>You will die in <{2}>{0}s</color></color>",
   "Haunter": "Haunter",
   "HaunterInfo": "You're the Impostors' Worst Nightmare",
   "HaunterInfoLong": "(Neutrals):\\nAs the Haunter, when you complete all of your tasks, a random living impostor's name will show in red to everyone in meetings. When you have 1 task left, all impostors will get an arrow pointing towards you, and if any of them come close to you, you lose this role.",
