Update source file en_US.json

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2638,6 +2638,33 @@
   "Samurai.NearbyDuration": "Time to Stay Near Target",
   "Samurai.SuccessKCD": "Kill Cooldown for Delayed Kills",
   "Samurai.KillDelay": "Kill Delay",
+  "QuizMaster": "Quiz Master",
+  "QuizMasterInfo": "Ask Questions to Players",
+  "QuizMasterInfoLong": "(Crewmates):\\nAs the Quiz Master, you can ask questions to players. If they answer correctly, nothing happens. If they answer incorrectly, they die.\\n\\nKill everyone to win!",
+  "QuizMaster.QuestionSample": "{0}\\nA: <b>{1}</b>\\nB: <b>{2}</b>\\nC: <b>{3}</b>\\n\\n<size=90%>To answer, type /qa (A/B/C) (ex.: '/qa C')\\nTo see this question again, type /qs",
+  "QuizMaster.MarkCooldown": "Player Marking Cooldown",
+  "QuizMaster.Question.1": "What was the color of the body that was last reported?",
+  "QuizMaster.Question.2": "Who was the last person that pressed the button?",
+  "QuizMaster.Question.3": "What was the last sabotage that was called?",
+  "QuizMaster.Question.4": "What was the most recently ejected player's role?",
+  "QuizMaster.Question.5": "Who reported the body in the last meeting?",
+  "QuizMaster.Question.6": "How many players voted last meeting (excluding hidden/extra votes)?",
+  "QuizMaster.Question.7": "How many meetings did we have so far?",
+  "QuizMaster.Question.8": "Whose body was reported first in the game?",
+  "QuizMaster.Question.9": "How many people pressed the emergency button before this meeting?",
+  "QuizMaster.Question.10": "How many players died in this round?",
+  "QuizMaster.Question.11": "How many players died in the first round?",
+  "QuizMaster.Question.12": "How many sabotages were called so far?",
+  "QuizMaster.Question.13": "How many tasks are currently completed?",
+  "QuizMaster.Question.14": "What base does (ROLE) have?",
+  "QuizMaster.Question.ABC.1": "What faction killed the last victim that got reported?",
+  "QuizMaster.Question.ABC.2": "How did the last victim that got reported die?",
+  "QuizMaster.Question.ABC.3": "Which Among Us mod has the most amount of roles?",
+  "QuizMaster.Question.ABC.4": "Who is the main developer of EHR?",
+  "QuizMaster.Question.ABC.5": "What alignment/team is {0} in?",
+  "QuizMaster.Question.ABC.6": "What is {0}?",
+  "QuizMaster.AnswerCorrect": "Correct! You may live.",
+  "QuizMaster.AnswerIncorrect": "Incorrect! You died.\\nThe answer was <b>{0}</b>.",
   "Bargainer": "Bargainer",
   "BargainerInfo": "Gain Money & Buy Power-Ups",
   "BargainerInfoLong": "(Neutrals):\\nAs the Bargainer, you can gain money by killing, sabotaging and surviving meetings. You can use this money to buy some items from the shop. All devices on this map represent a shop you can use by going near it. You can buy the following items:<size=80%>\\n- Energy Drink (lowers your kill cooldown for that round)\\n- Lens Of Truth (reveals a random player's role for some time)\\n- Band Aid (gives you a shield for some time)</size>\\nWhen you step away from a shop, the selected item will be purchased if you have enough money for it. You can choose to not buy anything. While in the shop, sabotage to cycle between the available items.",
