Continue Quiz Master (questions done)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -18,6 +18,7 @@
   "TeamNeutral": "Neutral",
   "TeamCrewmate": "Crewmate",
   "TeamMadmate": "Madmate",
+  "Neutral": "Neutral",
   "YouAreCrewmate": "<size=1.7><color=#ffffff>TEAM:</color> CREWMATES</size>",
   "YouAreImpostor": "<size=0>.</size>",
   "YouAreNeutral": "<size=1.7><color=#ffffff>TEAM:</color> NEUTRAL</size>",
@@ -1112,6 +1113,7 @@
   "ConfirmRogueOnEject": "Confirm <color=#696969>Mavericks</color> on ejection",
   "HideBittenRolesOnEject": "Hide roles of <color=#7b8968>bitten<color> players on ejection",
   "ShowTeamNextToRoleNameOnEject": "Show what team the ejected player's role is on",
+  "Addon": "Add-on",
   "Ban": "Ban",
   "Kick": "Kick",
   "NoticeMe": "Notify me",
@@ -2642,6 +2644,9 @@
   "QuizMasterInfo": "Ask Questions to Players",
   "QuizMasterInfoLong": "(Crewmates):\\nAs the Quiz Master, you can ask questions to players. If they answer correctly, nothing happens. If they answer incorrectly, they die.\\n\\nKill everyone to win!",
   "QuizMaster.QuestionSample": "{0}\\nA: <b>{1}</b>\\nB: <b>{2}</b>\\nC: <b>{3}</b>\\n\\n<size=90%>To answer, type /qa (A/B/C) (ex.: '/qa C')\\nTo see this question again, type /qs",
+  "QuizMaster.Title": "Quiz Master Question",
+  "QuizMaster.QuestionSample.Title": "Quiz Master Questioned You",
+  "QuizMaster.QuestionSample.Title.Self": "Sent Question:",
   "QuizMaster.MarkCooldown": "Player Marking Cooldown",
   "QuizMaster.Question.1": "What was the color of the body that was last reported?",
   "QuizMaster.Question.2": "Who was the last person that pressed the button?",
@@ -2651,7 +2656,7 @@
   "QuizMaster.Question.6": "How many players voted last meeting (excluding hidden/extra votes)?",
   "QuizMaster.Question.7": "How many meetings did we have so far?",
   "QuizMaster.Question.8": "Whose body was reported first in the game?",
-  "QuizMaster.Question.9": "How many people pressed the emergency button before this meeting?",
+  "QuizMaster.Question.9": "How many people pressed the emergency button so far <size=80%>(including this meeting if it's a button)</size>?",
   "QuizMaster.Question.10": "How many players died in this round?",
   "QuizMaster.Question.11": "How many players died in the first round?",
   "QuizMaster.Question.12": "How many sabotages were called so far?",
@@ -2664,7 +2669,9 @@
   "QuizMaster.Question.ABC.5": "What alignment/team is {0} in?",
   "QuizMaster.Question.ABC.6": "What is {0}?",
   "QuizMaster.AnswerCorrect": "Correct! You may live.",
+  "QuizMaster.AnswerCorrect.Self": "Your target answered the question correctly. ({0})",
   "QuizMaster.AnswerIncorrect": "Incorrect! You died.\\nThe answer was <b>{0}</b>.",
+  "QuizMaster.AnswerIncorrect.Self": "Your target answered incorrectly. They chose {0}, while the correct option was {1}.",
   "Bargainer": "Bargainer",
   "BargainerInfo": "Gain Money & Buy Power-Ups",
   "BargainerInfoLong": "(Neutrals):\\nAs the Bargainer, you can gain money by killing, sabotaging and surviving meetings. You can use this money to buy some items from the shop. All devices on this map represent a shop you can use by going near it. You can buy the following items:<size=80%>\\n- Energy Drink (lowers your kill cooldown for that round)\\n- Lens Of Truth (reveals a random player's role for some time)\\n- Band Aid (gives you a shield for some time)</size>\\nWhen you step away from a shop, the selected item will be purchased if you have enough money for it. You can choose to not buy anything. While in the shop, sabotage to cycle between the available items.",
