--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1694,6 +1694,7 @@
   "DeathReason.YinYanged": "Yin Yanged",
   "DeathReason.Kamikazed": "Kamikazed",
   "DeathReason.RNG": "RNG",
+  "DeathReason.WrongAnswer": "Wrong Answer",
   "DeathReason.etc": "Other",
   "DeathReason.Hack": "Hacked",
   "DeathReason.Curse": "Cursed",
@@ -2642,12 +2643,14 @@
   "Samurai.KillDelay": "Kill Delay",
   "QuizMaster": "Quiz Master",
   "QuizMasterInfo": "Ask Questions to Players",
-  "QuizMasterInfoLong": "(Crewmates):\\nAs the Quiz Master, you can ask questions to players. If they answer correctly, nothing happens. If they answer incorrectly, they die.\\n\\nKill everyone to win!",
-  "QuizMaster.QuestionSample": "{0}\\nA: <b>{1}</b>\\nB: <b>{2}</b>\\nC: <b>{3}</b>\\n\\n<size=90%>To answer, type /qa (A/B/C) (ex.: '/qa C')\\nTo see this question again, type /qs",
+  "QuizMasterInfoLong": "(Neutrals):\\nAs the Quiz Master, you can ask questions to players. If they answer correctly, nothing happens. If they answer incorrectly, they die.\\n\\nKill everyone to win!",
+  "QuizMaster.QuestionSample": "{0}\\n{1}\\n\\n<size=80%>To answer, type /qa (A/B/C) (ex.: '/qa C')\\nTo see this question again, type /qs\\nIf you don't answer or answer incorrectly, you die",
   "QuizMaster.Title": "Quiz Master Question",
   "QuizMaster.QuestionSample.Title": "Quiz Master Questioned You",
   "QuizMaster.QuestionSample.Title.Self": "Sent Question:",
   "QuizMaster.MarkCooldown": "Player Marking Cooldown",
+  "QuizMaster.EnableCustomQuestions": "Enable Custom Questions",
+  "QuizMaster.CustomQuestionChance": "Chance of Custom Question",
   "QuizMaster.Question.1": "What was the color of the body that was last reported?",
   "QuizMaster.Question.2": "Who was the last person that pressed the button?",
   "QuizMaster.Question.3": "What was the last sabotage that was called?",
@@ -2700,6 +2703,7 @@
   "Bargainer.BandAid": "Band Aid",
   "Bargainer.Suffix.InShop": "<size=80%>[<#00ffa5>Shop</color>] Selected: {0} ({1})</size>",
   "Forever": "Forever",
+  "CanKillWithDoubleClick": "Can Kill with Double Click method",
   "UntilNextMeeting": "Until Next Meeting",
   "UntilNextReveal": "Until Next Reveal",
   "ForSpecifiedTime": "For Specified Time",
