--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2702,6 +2702,21 @@
   "Bargainer.LensOfTruth": "Lens Of Truth",
   "Bargainer.BandAid": "Band Aid",
   "Bargainer.Suffix.InShop": "<size=80%>[<#00ffa5>Shop</color>] Selected: {0} ({1})</size>",
+  "Chemist": "Chemist",
+  "ChemistInfo": "Mix Chemicals",
+  "ChemistInfoLong": "(Neutrals):\\nAs the Chemist, good luck",
+  "Chemist.Item.Air": "Air",
+  "Chemist.Item.BaseMineralOil": "Base Mineral Oil",
+  "Chemist.Item.Coal": "Coal",
+  "Chemist.Item.Explosive": "Explosive",
+  "Chemist.Item.Grenade": "Grenade",
+  "Chemist.Item.IronIngot": "Iron Ingot",
+  "Chemist.Item.IronPlate": "Iron Plate",
+  "Chemist.Item.MoltenIron": "Molten Iron",
+  "Chemist.Item.Naphtha": "Naphtha",
+  "Chemist.Item.Steam": "Steam",
+  "Chemist.Item.ThermalWater": "Thermal Water",
+  "Chemist.Item.Water": "Water",
   "Forever": "Forever",
   "CanKillWithDoubleClick": "Can Kill with Double Click method",
   "UntilNextMeeting": "Until Next Meeting",
