Chemist done in theory

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2717,6 +2717,21 @@
   "Chemist.Item.Steam": "Steam",
   "Chemist.Item.ThermalWater": "Thermal Water",
   "Chemist.Item.Water": "Water",
+  "Chemist.Item.Explosive.Usage": "Amount of Explosives Lost When Using",
+  "Chemist.Item.Grenade.Usage": "Amount of Grenades Lost When Using",
+  "Chemist.Item.SulfuricAcid.Usage": "Amount of Sulfuric Acid Lost When Using",
+  "Chemist.Item.MethylamineGas.Usage": "Amount of Methylamine Gas Lost When Using",
+  "Chemist.AirGainedPerSecond": "Amount of Air Gained Every Second",
+  "Chemist.WaterGainedPerSecond": "Amount of Water Gained Every Second",
+  "Chemist.CoalGainedPerTask": "Amount of Coal Gained With Each Task Completed",
+  "Chemist.IronOreGainedPerTask": "Amount of Iron Ore Gained With Each Task Completed",
+  "Chemist.AcidPlayersDie": "Acid Players Die",
+  "Chemist.AcidPlayersDieAfterTime": "Time",
+  "Chemist.BlindDuration": "Blinding Duration",
+  "Chemist.GrenadeExplodeDelay": "Grenade Explosion Delay",
+  "Chemist.GrenadeExplodeRadius": "Grenade Explosion Radius",
+  "AfterMeeting": "After Meeting",
+  "AfterTime": "After Time",
   "Forever": "Forever",
   "CanKillWithDoubleClick": "Can Kill with Double Click method",
   "UntilNextMeeting": "Until Next Meeting",
