Parasite SS via Pet; Finish Chemist (in practice)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2704,7 +2704,7 @@
   "Bargainer.Suffix.InShop": "<size=80%>[<#00ffa5>Shop</color>] Selected: {0} ({1})</size>",
   "Chemist": "Chemist",
   "ChemistInfo": "Mix Chemicals",
-  "ChemistInfoLong": "(Neutrals):\\nAs the Chemist, good luck",
+  "ChemistInfoLong": "(Neutrals):\\nAs the Chemist, mix all sorts of chemicals to make overpowered gasses and items. Each room on the ship functions as a type of factory. In each factory, you can do some processes that take ingredients and get the results. Work your way to get these end products, which do the following:\\n- Sulfuric Acid: Mark someone with the kill button, and that player will spread the acid to all players they go nearby. After some time, all the acid players die.\\n- Methylamine Gas: Vent to blind everyone except you.\\n- Explosive: Gets put onto the next dead body you make. Everyone who tries to report it dies.\\n- Grenade: Put this onto someone via the kill button. They now carry the grenade. It blows up in seconds, killing that player and everyone nearby.",
   "Chemist.Item.Air": "Air",
   "Chemist.Item.BaseMineralOil": "Base Mineral Oil",
   "Chemist.Item.Coal": "Coal",
@@ -2717,14 +2717,15 @@
   "Chemist.Item.Steam": "Steam",
   "Chemist.Item.ThermalWater": "Thermal Water",
   "Chemist.Item.Water": "Water",
+  "Chemist.Item.IronOre": "Iron Ore",
   "Chemist.Item.Explosive.Usage": "Amount of Explosives Lost When Using",
   "Chemist.Item.Grenade.Usage": "Amount of Grenades Lost When Using",
   "Chemist.Item.SulfuricAcid.Usage": "Amount of Sulfuric Acid Lost When Using",
   "Chemist.Item.MethylamineGas.Usage": "Amount of Methylamine Gas Lost When Using",
   "Chemist.AirGainedPerSecond": "Amount of Air Gained Every Second",
   "Chemist.WaterGainedPerSecond": "Amount of Water Gained Every Second",
-  "Chemist.CoalGainedPerTask": "Amount of Coal Gained With Each Task Completed",
-  "Chemist.IronOreGainedPerTask": "Amount of Iron Ore Gained With Each Task Completed",
+  "Chemist.CoalGainedPerVent": "Amount of Coal Gained With Venting",
+  "Chemist.IronOreGainedPerVent": "Amount of Iron Ore Gained With Venting",
   "Chemist.AcidPlayersDie": "Acid Players Die",
   "Chemist.AcidPlayersDieAfterTime": "Time",
   "Chemist.BlindDuration": "Blinding Duration",
