Some improvements & support 100 player lobbies

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3601,6 +3601,7 @@
   "WardenInfo": "Boost the Crewmates",
   "WardenInfoLong": "(Crewmates):\\nAs the Warden, you can protect someone (optimally a crewmate) to notify them about being in danger and to give them a temporary speed boost.",
   "WardenNotify": "The Warden warns you that you're in danger!",
+  "WardenAdditionalSpeed": "Additional Speed",
   "Prefix.Warden": "Warden",
   "Specter": "Phantom",
   "SpecterInfo": "Finish Tasks to Win!",
@@ -3874,6 +3875,11 @@
   "VultureReportCooldown": "Eat Cooldown",
   "VultureMaxEatenInOneRound": "Maximum eaten bodies possible per round",
   "VultureCooldownUp": "Eat Cooldown finished",
+  "VultureChangeRoleWhenCantWin": "Change role when can't win",
+  "VultureChangeRole": "Role to change to",
+  "ImpCanBeRole": "<color=#ff1919>Impostors</color> can become {role}",
+  "CrewCanBeRole": "<color=#8cffff>Crewmates</color> can become {role}",
+  "NeutralCanBeRole": "<color=#ffab1b>Neutrals</color> can become {role}",
   "PirateTryHideMsg": "Hide <color=#EDC240>Pirate</color>'s commands",
   "SuccessfulDuelsToWin": "Number of successful duels needed to win",
   "PirateMeetingMsg": "Duel with your target.\\n\\n Duel command :-\\n⦿ /duel 0 (to select rock)\\n⦿ /duel 1 (to select Paper)\\n⦿ /duel 2 (to select Scissors)\\n\\nYou win if you choose same option as the target",
