--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3621,6 +3621,10 @@
   "HaunterFinishedTasks": "The Haunter completed all tasks, an impostor was revealed! (But it wasn't you)",
   "HaunterStopped": "The Haunter was successfully stopped!",
   "HaunterStoppedSelf": "An impostor came too close to you, your role was removed.",
+  "Haunter.TasksBeforeBeingKnown": "Reveal Haunter When They've Completed This Many Tasks",
+  "Haunter.RevealNeutralKillers": "Can Reveal <#ffab1b>Neutral Killers</color>",
+  "Haunter.RevealMadmates": "Can Reveal <#ff1919>Madmates</color>",
+  "Haunter.NumberOfReveals": "Number of Players Revealed on Task Completion",
   "Prefix.Haunter": "Haunter",
   "NumOfTasks": "Number of Tasks to Finish",
   "MasochistKillMax": "Amount of attacks needed to win",
